# techtree_django

./: .dmypy.json  .gitignore  .roomodes  README.md  conftest.py  kill_servers.sh  line_counts.sh  manage.py  pyproject.toml  run.sh  todo.md
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-gosu-code  system-prompt-help-me-edit  system-prompt-test
core/: admin.py  constants.py  design.md  exceptions.py  models.py  tests.py  urls.py  views.py
docs/: PRD.md  background_tasks_refactoring_plan.md  design_instructions.md  design_overview.md  django_rewrite_plan.md  htmx_refactor_patterns.md  htmx_refactor_plan.md  markdown.md  quiz_implementation_plan.md  restore_first_lesson_generation_plan.md  synchronous_syllabus_generation.md  test_suite_refactoring_plan.md
lessons/: admin.py  apps.py  consumers.py  content_service.py  design.md  interaction_service.py  routing.py  services.py  state_service.py  test_ai_node_classify_intent.py  test_ai_node_evaluate_answer.py  test_ai_node_generate_chat_response.py  test_ai_node_generate_new_assessment.py  test_ai_node_generate_new_exercise.py  test_ai_nodes.py  test_services.py  test_services_chat.py  test_services_content.py  test_view_change_difficulty.py  test_views.py  urls.py  views.py
onboarding/: ai.py  apps.py  conftest.py  design.md  logic.py  prompts.py  test_ai.py  test_assessment_views.py  test_generating_polling_views.py  test_skip_assessment_view.py  test_views.py  urls.py  views.py
syllabus/: admin.py  apps.py  conftest.py  design.md  services.py  test_ai_node_end_node.py  test_ai_node_generate_syllabus.py  test_ai_node_initialize_state.py  test_ai_node_save_syllabus.py  test_ai_node_search_database.py  tests.py  (+8 more)
(+87 files in other folders)
